# eyb-dash

./: Dockerfile  README.md  analysis.py  application.py  data_processing.ipynb  data_processing.py  eyb_requirements.txt  generate_image_paths.py  pyproject.toml
assets/2023-02-05/: author.csv  book.csv  book_authorship.csv  book_country.csv  nulls.csv  recipe.csv  recipe_authorship.csv  recipe_bookmark.csv  recipe_category.csv  recipe_data.csv  recipe_data_location.csv  recipe_dates_cooked.csv  recipe_ingredient.csv  shelf_book.csv
assets/2023-03-11/: author.csv  book.csv  book_authorship.csv  book_country.csv  note.csv  nulls.csv  recipe.csv  recipe_authorship.csv  recipe_bookmark.csv  recipe_category.csv  recipe_data.csv  recipe_data_location.csv  recipe_ingredient.csv  shelf_book.csv
assets/2024-04-07/in/: book_country.csv
eyb-dash/: Dockerfile  README.md  application.py  requirements.txt
eyb-recsys/: book_recommender.py  book_similarities.py  create_book_recs.py  create_book_similarities.py  create_recipe_recs.py  recipe_recommender.py  recipe_vectorizer.py
eyb-st/: 0_👋_About_culinary_chronicles.py  eyb-st_requirements.txt
eyb-st/pages/: 1_👩‍🍳_Whisk_through_time.py  2_🥗_Next_on_the_menu.py  3_📖_Next_on_the_bookshelf.py
