[tool.poetry]
name = "eyb"
version = "0.1.0"
description = "Eat Your Books Insights"
authors = ["katyasa <82473934+katyasa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
altair = "5.1.2"
streamlit = "1.28.0"
pandas = "^2.2.1"
tqdm = "^4.66.2"
scikit-learn = "1.3.0"
scipy = "^1.12.0"
unidecode = "1.3.8"
plotly = "5.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
